--- a/index.Rmd
+++ b/index.Rmd
@@ -169,19 +169,19 @@ package.scheme.1 <- function(width = 900) {
   return(DiagrammeR::grViz("digraph {
     graph [layout = dot, splines = ortho, rankdir = TB, nodesep = 1.5, overlap = false, fontname = 'Poppins']
 
-    node [shape = parallelogram, style = filled, fillcolor = \"#004E5A60\", fontcolor = black, fontname = 'Poppins', color = \"#004E5A\", fontsize = 20 ]
+    node [shape = parallelogram, style = filled, fillcolor = \"#004E5A60\", fontcolor = black, fontname = 'Poppins', color = \"#004E5A\", fontsize = 22 ]
     zero[label = 'User-defined input']
     end1[label = 'Merged database']
     end2[label = 'Maps']
 
-    node [shape = rectangle, style = filled, fillcolor = \"#004E5A60\", fontcolor = black, fontname = 'Poppins', color = \"#004E5A\", fontsize = 20, width = 3.4]
+    node [shape = rectangle, style = filled, fillcolor = \"#004E5A60\", fontcolor = black, fontname = 'Poppins', color = \"#004E5A\", fontsize = 22, width = 3.4]
     F1[label = 'Get_ functions']
     F2[label = 'Util_ functions']
     F3[label = 'Group_ functions']
     F4[label = 'Set_DB']
     F5[label = 'Map_ functions']
 
-    node [shape = oval, style = filled, fillcolor = \"#004E5A60\", fontcolor = black, fontname = 'Poppins', color = \"#004E5A\", fontsize = 20, width = 3.4]
+    node [shape = oval, style = filled, fillcolor = \"#004E5A60\", fontcolor = black, fontname = 'Poppins', color = \"#004E5A\", fontsize = 22, width = 3.4]
     O1[label = 'Raw datasets']
     O2[label = 'Spatial\ngeometries']
     O3[label = 'Edited datasets']
@@ -488,7 +488,7 @@ spde_summary.hyperpar[2, ]<- round(spde_summary.hyperpar[2, ], 0)
 ## Usage example: OLS regression
 <img src="GRINS_watermark_v1.png" alt="Watermark Logo" class="watermark-logo">
 
-- Simplest analysis: **OLS** regression of **Invalsi scores** on average **class size** (municipality-level data)
+- Simplest analysis: **OLS** regression of municipality-level **Invalsi scores** on municipality-level average **classroom size** 
 
 $$
 y = \beta_0 +  \beta_\mathrm{nstud} X_\mathrm{nstud} + \varepsilon
@@ -498,11 +498,17 @@ $$
 $y$: Invalsi score; $X_\mathrm{nstud}$: classroom size; $\beta$: regression coefficients; $\varepsilon$: Gaussian error
 </p>
 
-&rarr; Puzzling result: **positive** association ($3.236$ Invalsi points):
+&rarr; Puzzling result: **positive** association ($3.236$ Invalsi points)
+&rarr; Does classroom size incorporate **additional information** we are overlooking? &rarr; example: **demographic** dynamics: classrooms are more crowded in **infrastructural poles** than in **peripheral areas**
+
+## Usage example: OLS regression
+<img src="GRINS_watermark_v1.png" alt="Watermark Logo" class="watermark-logo">
+
+
 ```{r ols res, echo = FALSE}
 ols8_0 <- lm(M_Mathematics_8 ~ 1 + nstud_8_std, data = DB23_mid_ctr)
 summary(ols8_0)$coefficients[,c(1,2)] %>% round(3) %>% 
-  DT::datatable( options = list(pageLength = 2))
+  DT::datatable( )    # options = list(pageLength = 5)
 ```
 
 
@@ -511,10 +517,11 @@ summary(ols8_0)$coefficients[,c(1,2)] %>% round(3) %>%
 ## Distribution of classroom size
 <img src="GRINS_watermark_v1.png" alt="Watermark Logo" class="watermark-logo">
 
-- Does classroom size depend on some **other variables** we are overlooking? &rarr; distribution across the $6$ classes of the inner areas taxonomy (**A**, **B**: pole; **C**: belt; **D**: intermediate; **E**: peripheral; **F**: ultra-peripheral) 
+- Distribution across the $6$ classes of the inner areas taxonomy (**A**, **B**: pole; **C**: belt; **D**: intermediate; **E**: peripheral; **F**: ultra-peripheral) 
 
 
-```{r nstud boxplot, message = FALSE, warning=FALSE, echo = FALSE, fig.height=3}
+
+```{r nstud boxplot, message = FALSE, warning=FALSE, echo = FALSE, fig.height = 3.3}
 nstud23$Municipality_data  %>% dplyr::filter(.data$Order == "Middle") %>%
   dplyr::mutate(idx = as.numeric(as.factor(.data$Municipality_code))) %>%
   dplyr::mutate(Inner_area = dplyr::case_when(
@@ -561,12 +568,18 @@ nstud23$Municipality_data  %>% dplyr::filter(.data$Order == "Middle") %>%
 ## Usage example: spatial model
 <img src="GRINS_watermark_v1.png" alt="Watermark Logo" class="watermark-logo">
 
-- $u$ defined over a **continuous spatial domain** with prior distribution: $u \sim N(0, \Sigma)$ &rarr; $\Sigma$: Matérn correlation matrix <div class = "footnote"> see:  Banerjee, S., Carlin, B.P., Gelfand, A.E. (2014). *Hierarchical Modeling and Analysis for Spatial Data*, 2nd edition, Chapman and Hall/CRC </div>
+- $u$ defined over a **continuous spatial domain** with prior distribution: $u \sim N(0, \Sigma)$ &rarr; $\Sigma$: Matérn correlation matrix 
+
+<div class = "footnote"> see:  Banerjee, S., Carlin, B.P., Gelfand, A.E. (2014). *Hierarchical Modeling and Analysis for Spatial Data*, 2nd edition, Chapman and Hall/CRC </div>
   
-- $u$ is approximated with a **Gaussian Markov Random Field** defined on a **2-d manifold** <div class = "footnote">
+- $u$ is approximated with a **Gaussian Markov Random Field** defined on a **2-d manifold** 
+
+<div class = "footnote">
 Lindgren, F., Rue, H., Lindström, J. (2011). *An Explicit Link between Gaussian Fields and Gaussian Markov Random Fields: The Stochastic Partial Differential Equation Approach*, JRSS B, 73(4), pp 423–498 </div>
 
-- Model estimated using the **Integrated Nested Laplace Approximation** (**INLA**) <div class = "footnote">
+- Model estimated using the **Integrated Nested Laplace Approximation** (**INLA**) 
+
+<div class = "footnote">
 Rue, H., Martino, S., & Chopin, N. (2009). *Approximate Bayesian inference for latent Gaussian models by using integrated nested Laplace approximations*. JRSS B, 71(2), 319-392. </div>
 
 
@@ -657,9 +670,11 @@ gridExtra::grid.arrange(ggleft, ggright, nrow = 1)
 <img src="GRINS_watermark_v1.png" alt="Watermark Logo" class="watermark-logo">
 
 
-- North-South trend  the pole/periphery differences: already kept into account 
+- **North-South** and **pole/periphery** differences already kept into account 
 
-- Hyperparameters posterior summary: median $\sigma^2$ (scale parameter of the spatial effect) about $31$ points
+- **Hyperparameters** posterior summary
+  - median $\sigma^2$ (*scale* parameter of the spatial effect) about $31$ points
+  - median **range** about $84.7$ kilometers
 ```{r hyperpar, echo = FALSE}
 DT::datatable(spde_summary.hyperpar, 
               options = list(pageLength = 5))
